force-app/main/default/objects/InspectionSchedule__c/InspectionSchedule__c.object-meta.xml
<CustomObject>
    <label>検査予定</label>
    <nameField>
        <label>検査予定年月</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>