force-app/main/default/objects/InspectionSchedule__c/fields/OppAM1__c.field-meta.xml
<CustomField>
    <fullName>OppAM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1日_AM</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (AM)</relationshipLabel>
    <relationshipName>OppAM</relationshipName>
    <type>Lookup</type>
</CustomField>