force-app/main/default/objects/InspectionSchedule__c/fields/OppAM2__c.field-meta.xml
<CustomField>
    <fullName>OppAM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2日_AM</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (2日_AM)</relationshipLabel>
    <relationshipName>OppAM2</relationshipName>
    <type>Lookup</type>
</CustomField>