force-app/main/default/objects/InspectionSchedule__c/fields/OppAM3__c.field-meta.xml
<CustomField>
    <fullName>OppAM3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3日_AM</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (３日_AM)</relationshipLabel>
    <relationshipName>OppAM3</relationshipName>
    <type>Lookup</type>
</CustomField>