force-app/main/default/objects/InspectionSchedule__c/fields/OppPM2__c.field-meta.xml
<CustomField>
    <fullName>OppPM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2日_PM</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (2日_PM)</relationshipLabel>
    <relationshipName>OppPM2</relationshipName>
    <type>Lookup</type>
</CustomField>