force-app/main/default/objects/InspectionSchedule__c/fields/OppPM3__c.field-meta.xml
<CustomField>
    <fullName>OppPM3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3日_PM</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (3日_PM)</relationshipLabel>
    <relationshipName>OppPM3</relationshipName>
    <type>Lookup</type>
</CustomField>