force-app/main/default/objects/InspectionSchedule__c/fields/OppPM4__c.field-meta.xml
<CustomField>
    <fullName>OppPM4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4日_PM4</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>検査予定 (3日_PM)</relationshipLabel>
    <relationshipName>OppPM3_166</relationshipName>
    <type>Lookup</type>
</CustomField>