force-app/main/default/objects/InspectionSchedule__c/recordTypes/Steel.recordType-meta.xml
<RecordType>
    <fullName>Steel</fullName>
    <active>true</active>
    <label>ノハラスチール</label>
</RecordType>